Prevent width jumps when overflow is hidden

--- a/src/app/sass/global/_layout.scss
+++ b/src/app/sass/global/_layout.scss
@@ -12,6 +12,7 @@ body {
 	background: $gray-200;
 
 	&.modal-open {
+		padding-right: 17px;
 		overflow: hidden;
 	}
 }
